# relight-x

./: .gitignore  LICENSE  README.md  requirements.txt
backend/: __init__.py  ai_vehicle_classifier.py  config.py  energy_model.py  health_model.py  highway_layout.py  lighting_controller.py  main.py  models.py  mqtt_bridge.py  passport.py  rex_engine.py  scenario_runner.py  sensor_simulator.py  vehicle_simulator.py
board_design/: README.md  bom.csv  five_node_board_map.csv  pin_mapping.csv  test_plan.md
board_simulation_wokwi/: README.md  diagram.json  platformio.ini  sketch.ino  vscode_arduino_intellisense.h  wokwi.toml
dashboard/: app.py
data/: digital_passports_sample.json  energy_model.json  highway_layout.json  luminaire_specs.json  maintenance_history.json  sensor_data.csv  vehicle_scenarios.json
docs/: backend_algorithm.md  board_design.md  five_node_board_demo.md  hardware_architecture.md  limitations_and_future_work.md  master_thesis_simulation_study.md  mqtt_protocol.md  relightx_master_thesis_report.md  rescum2_fit.md  system_architecture.md  testing_plan.md  thesis_demo_and_validation_steps.md  tool_workflow.md  unity_digital_twin.md
edge_controller_firmware/: README.md  platformio.ini
ros2_gazebo_optional/: README.md
ros2_gazebo_optional/relightx_bringup/: launch_relightx_demo.py  package.xml
ros2_gazebo_optional/relightx_description/: highway_lighting.urdf.xacro  package.xml
tests/: test_backend.py
tools/: run_board_network_demo.py  run_mqtt_broker.py  run_thesis_validation.py
unity_digital_twin/: README.md
(+70 files in other folders)
