<?xml version="1.0"?>
<package format="3">
  <name>relightx_bringup</name>
  <version>0.1.0</version>
  <description>Optional ReLight-X ROS2 bringup skeleton.</description>
  <maintainer email="research@example.com">ReLight-X Prototype</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
